LS-2307 - starting dish controller - implem done for retrieveDish.  Needs cleanup